Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-113209

Qt::ItemNeverHasChildren prevents itemChanged() from being fired

    XMLWordPrintable

Details

    • fa67cd033 (dev), a9276e0fb (6.5), 5be21824a (tqtc/lts-6.2), c62c68920 (6.5.1)

    Description

      When a QTableWidgetItem is created, if the flag Qt::ItemNeverHasChildren is set on it, this prevents the QTableWidget from firing its itemChanged() signal to indicate that the cell has finished editing. The documentation states that this flag is "for optimization purposes only" and I could not find any other indication that this flag was causing my problem, I had to dive deep into the source code to figure it out.

       

      Is there a reason this happens or is it just a bug? Perhaps the documentation could be updated as well?

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              anmaatta Antti Määttä
              bparker Brad Parker
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes