tests/auto/widgets/itemviews/qtablewidget/tst_qtablewidget.cpp
@@ -63,6 +63,7 @@ private slots:
     void task219380_removeLastRow();
     void task262056_sortDuplicate();
     void itemWithHeaderItems();
+    void checkHeaderItemFlagsConflict();
     void mimeData();
     void selectedRowAfterSorting();
     void search();
@@ -1667,6 +1668,25 @@ void tst_QTableWidget::itemWithHeaderItems()
     table.setItem(1, 0, item1_0);
 
     QCOMPARE(table.item(0, 1), nullptr);
+}
+
+void tst_QTableWidget::checkHeaderItemFlagsConflict()
+{
+    // QTBUG-113209
+    // Check that setting header item doesn't set Qt::ItemNeverHasChildren
+    // Chech that header items do not emit itemChanged.
+    QTableWidget table(1, 1);
+    QSignalSpy itemChangeSpy(&table, &QTableWidget::itemChanged);
+    QVERIFY(itemChangeSpy.isValid());
+
+    QTableWidgetItem *item = new QTableWidgetItem("Initial");
+    table.setHorizontalHeaderItem(0, item);
+
+    QVERIFY(!(item->flags() & Qt::ItemNeverHasChildren));
+
+    item->setData(Qt::DisplayRole, "updated");
+
+    QCOMPARE(itemChangeSpy.size(), 0);
 }
 
 class TestTableWidget : public QTableWidget
